@@ -50,7 +50,7 @@
 #	synth.mode.voice.dbName - the name of the unit database for the voice
 #
 
-synthesizers = unlimited limited streaming mbrola
+synthesizers = unlimited limited streaming mbrola redirect
 
 # -- unlimited synthesizer 
 unlimited.engineName = Unlimited domain FreeTTS Speech Synthesizer from Sun Labs
@@ -183,4 +183,138 @@ silent.diphone.kevin16.gender = GENDER_MALE
 silent.diphone.kevin16.age = AGE_YOUNG_ADULT
 silent.diphone.kevin16.dbName = cmu_kal/diphone_units16.bin
 
+
+# -- unlimited synthesizer  that redirects output to a file
+redirect.engineName = Unlimited domain FreeTTS Speech Synthesizer from Sun Labs
+redirect.locale.language = en
+redirect.locale.country = US
+redirect.lexicon = com.sun.speech.freetts.en.us.CMULexicon
+redirect.modes = diphone
+redirect.audioPlayer = com.sun.speech.freetts.audio.SingleFileAudioPlayer
+
+# ----- streaming mode
+# This is a test synthesizer that sends its output to
+# the null audio player. 
+streaming.diphone.modeName = CMU Diphone
+streaming.diphone.voices = kevin kevin16
+
+# A 8kHz voice
+streaming.diphone.kevin.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+streaming.diphone.kevin.gender = GENDER_MALE
+streaming.diphone.kevin.age = AGE_YOUNG_ADULT
+streaming.diphone.kevin.dbName = cmu_kal/diphone_units.bin
+
+# A 16kHz voice
+streaming.diphone.kevin16.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+streaming.diphone.kevin16.gender = GENDER_MALE
+streaming.diphone.kevin16.age = AGE_YOUNG_ADULT
+streaming.diphone.kevin16.dbName = cmu_kal/diphone_units16.bin
+
+
+# -- mbrola synthesizer 
+mbrola.engineName = FreeTTS MBROLA Speech Synthesizer from DFKI
+mbrola.locale.language = en
+mbrola.locale.country = US
+mbrola.lexicon = com.sun.speech.freetts.en.us.CMULexicon
+mbrola.audioPlayer = com.sun.speech.freetts.audio.JavaStreamingAudioPlayer
+mbrola.modes = diphone
+
+# ----- mbrola mode
+mbrola.diphone.modeName = MBROLA diphone
+mbrola.diphone.voices = mbrola1 mbrola2 mbrola3
+
+# A female voice
+mbrola.diphone.mbrola1.class=de.dfki.lt.freetts.en.us.MbrolaVoiceUS1
+mbrola.diphone.mbrola1.validator=de.dfki.lt.freetts.en.us.MbrolaVoiceUS1Validator
+mbrola.diphone.mbrola1.gender = GENDER_FEMALE
+mbrola.diphone.mbrola1.age = AGE_YOUNG_ADULT
+mbrola.diphone.mbrola1.pitch = 180
+mbrola.diphone.mbrola1.pitchRange = 22
+mbrola.diphone.mbrola1.speakingRate = 150
+
+# A male voice
+mbrola.diphone.mbrola2.class=de.dfki.lt.freetts.en.us.MbrolaVoiceUS2
+mbrola.diphone.mbrola2.validator=de.dfki.lt.freetts.en.us.MbrolaVoiceUS2Validator
+mbrola.diphone.mbrola2.gender = GENDER_MALE
+mbrola.diphone.mbrola2.age = AGE_YOUNG_ADULT
+mbrola.diphone.mbrola2.pitch = 115
+mbrola.diphone.mbrola2.pitchRange = 12
+mbrola.diphone.mbrola2.speakingRate = 150
+
+# Another male voice
+mbrola.diphone.mbrola3.class=de.dfki.lt.freetts.en.us.MbrolaVoiceUS3
+mbrola.diphone.mbrola3.validator=de.dfki.lt.freetts.en.us.MbrolaVoiceUS3Validator
+mbrola.diphone.mbrola3.gender = GENDER_MALE
+mbrola.diphone.mbrola3.age = AGE_YOUNG_ADULT
+mbrola.diphone.mbrola3.pitch = 125
+mbrola.diphone.mbrola3.pitchRange = 12
+mbrola.diphone.mbrola3.speakingRate = 150
+
+
+# -- silent synthesizer 
+silent.engineName = Silent FreeTTS Speech Synthesizer from Sun Labs
+silent.locale.language = en
+silent.locale.country = US
+silent.lexicon = com.sun.speech.freetts.en.us.CMULexicon
+silent.audioPlayer = com.sun.speech.freetts.audio.NullAudioPlayer
+silent.modes = diphone
+
+# ----- silent mode
+# This is a test synthesizer that sends its output to
+# the null audio player. 
+silent.diphone.modeName = CMU Diphone
+silent.diphone.voices = kevin kevin16
+
+# A 8kHz voice
+silent.diphone.kevin.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+silent.diphone.kevin.gender = GENDER_MALE
+silent.diphone.kevin.age = AGE_YOUNG_ADULT
+silent.diphone.kevin.dbName = cmu_kal/diphone_units.bin
+
+# A 16kHz voice
+silent.diphone.kevin16.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+silent.diphone.kevin16.gender = GENDER_MALE
+silent.diphone.kevin16.age = AGE_YOUNG_ADULT
+silent.diphone.kevin16.dbName = cmu_kal/diphone_units16.bin
+
+
+# -- unlimited synthesizer  that redirects output to a file
+redirect.engineName = Unlimited domain FreeTTS Speech Synthesizer from Sun Labs
+redirect.locale.language = en
+redirect.locale.country = US
+redirect.lexicon = com.sun.speech.freetts.en.us.CMULexicon
+redirect.modes = diphone
+
+# ----- redirect mode
+redirect.diphone.modeName = CMU Diphone
+redirect.diphone.voices = kevin kevin16
+
+# A 8kHz voice
+redirect.diphone.kevin.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+redirect.diphone.kevin.gender = GENDER_MALE
+redirect.diphone.kevin.age = AGE_YOUNG_ADULT
+redirect.diphone.kevin.dbName = cmu_kal/diphone_units.bin
+
+# A 16kHz voice
+redirect.diphone.kevin16.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+redirect.diphone.kevin16.gender = GENDER_MALE
+redirect.diphone.kevin16.age = AGE_YOUNG_ADULT
+redirect.diphone.kevin16.dbName = cmu_kal/diphone_units16.bin
+
+
+# ----- redirect mode
+redirect.diphone.modeName = CMU Diphone
+redirect.diphone.voices = kevin kevin16
+
+# A 8kHz voice
+redirect.diphone.kevin.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+redirect.diphone.kevin.gender = GENDER_MALE
+redirect.diphone.kevin.age = AGE_YOUNG_ADULT
+redirect.diphone.kevin.dbName = cmu_kal/diphone_units.bin
+
+# A 16kHz voice
+redirect.diphone.kevin16.class=com.sun.speech.freetts.en.us.CMUDiphoneVoice
+redirect.diphone.kevin16.gender = GENDER_MALE
+redirect.diphone.kevin16.age = AGE_YOUNG_ADULT
+redirect.diphone.kevin16.dbName = cmu_kal/diphone_units16.bin
 
